test/fails/bad_tags/parameterized6.lgl
tag a is vec2;
tag a2 is a;
tag b is vec3;
tag p<`t : vec2> is vec2;
tag pl<`t : vec2> is `t;
tag bl<`t : b> is `t;
tag pany<`t : vec> is vec2;
tag p3<`t : vec3> is pany<`t>;
tag r<`t : a> is vec3;

void main() {
    bl<r<a>> fail = [1., 2., 3.]; // constraint fail for bl

    print 1;
}